--- a/TianDao/index.html
+++ b/TianDao/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>My test page</title>
   <script src="myJs.js"></script>
+  <link rel="icon" href="../logo.ico" type="image/x-icon"/>
   <link rel="stylesheet" type="text/css" href="myCss.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
