--- a/ColorCard/index.html
+++ b/ColorCard/index.html
@@ -4,16 +4,33 @@
 <head>
   <meta charset="utf-8">
   <title>My test page</title>
-  <link rel="icon" href="../logo.ico" type="image/x-icon"/>
-  <link rel="stylesheet" type="text/css" href="myCss.css">
+  <script src="ColorCard.js"></script>
+  <link rel="icon" href="../logo.ico" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="ColorCard.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body>
-
-  git
-
+  <!-- first -->
+  <div  id='DivColor'>
+  </div>
+  <hr>
+  <!-- second -->
+  <div>
+    <div><input type="range" min="0" max="255" step="1" id="BarColorR">
+      <font color="red" id="fontR">128</font>
+    </div>
+    <div><input type="range" min="0" max="255" step="1" id="BarColorG">
+      <font color="green"  id="fontG">128</font>
+    </div>
+    <div><input type="range" min="0" max="255" step="1" id="BarColorB">
+      <font color="blue"  id="fontB">128</font>
+    </div>
+    <font color="blue"  id="test">128</font>
+    <hr>
+    <!-- third -->
+    <div id="divCard"></div>
 </body>
 
 </html>
