--- a/Resume/index.html
+++ b/Resume/index.html
@@ -16,53 +16,51 @@
   <div>蔡昀翰 Tsai-Yun-Han</div>
   <div>0932807031</div>
   <div>hank2382551@gmail.com</div>
-  <div>freeteatime.com</div>
+  <div>Welcome</div>
   <hr>
   <!-- Skill -->
   <div class="wrap">
     <div class="skill">
-      <div class="skillCardTitle">Microsoft </div>
-      <div class="skillCard">ASP.NET</div>
-      <div class="skillCard">C#</div>
-      <div class="skillCard">VB</div>
-      <div class="skillCard">Web Form</div>
-      <div class="skillCard">MVC</div>
+      <div class="Card title">Microsoft </div>
+      <div class="Card border smallCard">ASP.NET</div>
+      <div class="Card border smallCard">C#</div>
+      <div class="Card border">VB</div>
+      <div class="Card border">Web Form</div>
+      <div class="Card border">MVC</div>
     </div>
     <div class="skill">
-      <div class="skillCardTitle">Database</div>
-      <div class="skillCard">MS SQL</div>
-      <div class="skillCard">MySQL</div>
+      <div class="Card title">Database</div>
+      <div class="Card border">MS SQL</div>
+      <div class="Card border">MySQL</div>
     </div>
     <div class="skill">
-      <div class="skillCardTitle">Web</div>
-      <div class="skillCard">HTML</div>
-      <div class="skillCard">JS(ES6)</div>
-      <div class="skillCard">BootStrap</div>
-      <div class="skillCard">jQuery</div>
-      <div class="skillCard">CSS</div>
+      <div class="Card title">Web</div>
+      <div class="Card border">HTML</div>
+      <div class="Card border">JS(ES6)</div>
+      <div class="Card border">BootStrap</div>
+      <div class="Card border">jQuery</div>
+      <div class="Card border">CSS</div>
     </div>
     <div class="skill">
-      <div class="skillCardTitle">Front-end</div>
+      <div class="Card title">Front-end</div>
     </div>
     <div class="skill">
-      <div class="skillCardTitle">Tool</div>
-      <div class="skillCard">Git</div>
-      <div class="skillCard">API</div>
+      <div class="Card title">Tool</div>
+      <div class="Card border">Git</div>
+      <div class="Card border">API</div>
     </div>
     <div class="skill">
-      <div class="skillCardTitle">Mobile</div>
-      <div class="skillCard">Swift</div>
+      <div class="Card title">Mobile</div>
     </div>
     <div class="skill">
-      <div class="skillCardTitle">喜歡或略懂</div>
-      <div class="skillCard">社會科學</div>
-      <div class="skillCard">UI</div>
+      <div class="Card title">Other</div>
+      <div class="Card border">UI</div>
     </div>
   </div>
   <!-- Experience -->
   <div class="expCard">
     <h1>環輿科技 Geographic Information Technology Co., LTD</h1>
-    <h2>Assistant Engineer 2018/03~2019/07 (17個月)</h2>
+    <h2>Assistant Engineer 2018/03~2019/07 </h2>
     <ul>
       <li><a href="https://www.tldep.gov.taipei/Public/" target="_blank">環境品質資訊網建置服務案</a></li>
       <li>台電空品模擬平台 </li>
@@ -71,7 +69,7 @@
   </div>
   <div class="expCard">
     <h1>中國生產力中心 China Productivity Center</h1>
-    <h2>Part Time System Engineer 2019/10~2019/12 (3個月)</h2>
+    <h2>Part Time System Engineer 2019/10~2019/12 </h2>
     <p>純粹因為要繳房租，找了個彈性的維護工作，入職時已明確告知主管年底離開</p>
   </div>
   <div class="expCard">
