add works block

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>My test page</title>
   <!-- <link rel="icon" href="../logo.ico" type="image/x-icon"/> -->
-  <link rel="stylesheet" type="text/css" href="Resume.css">
+  <link rel="stylesheet" type="text/css" href="resume.css">
+  <script src="resume.js"></script>
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
 </head>
@@ -58,7 +59,7 @@
     </div>
   </div>
   <!-- Experience -->
-  <div class="expCard">
+  <div class="bigCard experience">
     <h1>環輿科技 Geographic Information Technology Co., LTD</h1>
     <h2>Assistant Engineer 2018/03~2019/07 </h2>
     <ul>
@@ -67,12 +68,12 @@
     </ul>
     <p>我在環輿服務了一年多，主要從事 Asp.net 的前後台開發與維護</p>
   </div>
-  <div class="expCard">
+  <div class="bigCard experience">
     <h1>中國生產力中心 China Productivity Center</h1>
     <h2>Part Time System Engineer 2019/10~2019/12 </h2>
     <p>純粹因為要繳房租，找了個彈性的維護工作，入職時已明確告知主管年底離開</p>
   </div>
-  <div class="expCard">
+  <div class="bigCard aboutMe">
     <h1>關於我</h1>
     <ul>
       <li>樂隊經驗6年 (大鼓、手風琴、口風琴、上低音號、豎笛)</li>
@@ -89,6 +90,15 @@
     </ul>
     <p></p>
   </div>
+   <!-- 作品 -->
+   <div class="bigCard">
+     <div class="play">
+       <input type="button" id="btn" value="Previus">
+       <input type="button" id="btn" value="Next">
+       <img src="works/tldep/1.png" id="ImgTldep">
+     </div>
+     <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/sA-wnyHaf5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+   </div>
 
 </body>
 
