--- a/Resume/index.html
+++ b/Resume/index.html
@@ -92,9 +92,9 @@
   </div>
    <!-- 作品 -->
    <div class="bigCard">
-     <div class="play">
-       <input type="button" id="btn" value="Previus">
-       <input type="button" id="btn" value="Next">
+     <div class="play" id="tldep">
+       <input type="button" id="btn_pre" value="Previus">
+       <input type="button" id="btn_next" value="Next">
        <img src="works/tldep/1.png" id="ImgTldep">
      </div>
      <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/sA-wnyHaf5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
