--- a/Resume/index.html
+++ b/Resume/index.html
@@ -65,7 +65,7 @@
   </div>
   <!-- Experience -->
   <div class="bigCard experience">
-    <h2>環輿科技 Geographic Information Technology Co., LTD</h2>
+    <h2>環輿科技 Geographic Information Technology</h2>
     <h3>Assistant Engineer 2018/03~2019/07 </h3>
     <ul>
       <li><a href="https://www.tldep.gov.taipei/Public/" target="_blank" class="a_Tldep">環境品質資訊網建置服務案</a></li>
@@ -138,7 +138,7 @@
     </div>
   </div>
   <div class="portfolioCard">
-    <h3>Report</h3>
+    <h3>Research</h3>
     <div  id="tldep">
       <a target="_blank" href="https://drive.google.com/open?id=1HH20Fwro7d7Ha4eZSCzvz_99h2SomDvf" class="a_button">Click to View This Report</a>
       <div class="spaceDiv"></div>
