--- a/Resume/index.html
+++ b/Resume/index.html
@@ -66,7 +66,7 @@
   <!-- Experience -->
   <div class="bigCard experience">
     <h2>環輿科技 Geographic Information Technology</h2>
-    <h3>Assistant Engineer 2018/03~2019/07 </h3>
+    <h3>Assistant Engineer <span class="timeColor">2018/03~2019/07</span>  </h3>
     <ul>
       <li><a href="https://www.tldep.gov.taipei/Public/" target="_blank" class="a_Tldep">環境品質資訊網建置服務案</a></li>
       <li>台電空品模擬平台 </li>
@@ -76,7 +76,7 @@
   </div>
   <div class="bigCard experience">
     <h2>中國生產力中心 China Productivity Center</h2>
-    <h3>Part Time System Engineer 2019/10~2019/12 </h3>
+    <h3>Part Time System Engineer <span class="timeColor">2019/10~2019/12</span> </h3>
     <p>因為要繳房租，找了個彈性的維護工作，入職時已明確告知主管年底離開</p>
     <p>在茫茫檔案中尋找前人的寶藏</p>
   </div>
