--- a/Resume/index.html
+++ b/Resume/index.html
@@ -77,7 +77,7 @@
   <div class="bigCard experience">
     <h2>中國生產力中心 China Productivity Center</h2>
     <h3>Part Time System Engineer <span class="timeColor">2019/10~2019/12</span> </h3>
-    <p>因為要繳房租，找了個彈性的維護工作，入職時已明確告知主管年底離開</p>
+    <p>因為要繳房租，找了個彈性的 .Net 維護工作，入職時已明確告知主管年底離開</p>
     <p>在茫茫檔案中尋找前人的寶藏</p>
   </div>
   <div class="bigCard aboutMe">
@@ -147,6 +147,7 @@
   </div>
   <div class="portfolioCard portfolioColor">
     <h3>感謝您閱讀至此，有任何問題歡迎直接聯繫，即使無關工作，如果想聊聊，也可以直接發個<a href="https://www.facebook.com/yunhank" class="a_Tldep">FB好友邀請</a>給我(請先告知您是誰) </h3>
+    <span class="introduction">當我往上一步，山頂更遠，探索永無止境</span>
     <span class="introduction">I have served. I will be of service.</span>
   </div>
 </body>
