--- a/Resume/index.html
+++ b/Resume/index.html
@@ -72,13 +72,17 @@
       <li>台電空品模擬平台 </li>
     </ul>
     <p>主要從事 Asp.net 的前後台開發與維護</p>
-    <p>與專案經理、設計師、業主溝通經驗</p>
+    <p>與專案經理開會進程掌控</p>
+    <p>與 UI 設計師商討可執行性</p>
+    <p>有時需協助專案經理應對客戶要求</p>
+    <p>與第三方廠商溝通資料串接</p>
   </div>
   <div class="bigCard experience">
     <h2>中國生產力中心 China Productivity Center</h2>
     <h3>Part Time System Engineer <span class="timeColor">2019/10~2019/12</span> </h3>
-    <p>因為要繳房租，找了個彈性的 .Net 維護工作，入職時已明確告知主管年底離開</p>
-    <p>在茫茫檔案中尋找前人的寶藏</p>
+    <p>彈性的 .Net 維護工作，入職時已明確告知主管年底離開</p>
+    <p>舊系統維護</p>
+    <p>協助辦理教育訓練</p>
   </div>
   <div class="bigCard aboutMe">
     <h2>關於我</h2>
@@ -89,7 +93,7 @@
       <li>零件經驗6年 (A10-5800K、FX-8120、E3-1230、i5-6400、r5-1600)</li>
       <li>手機經驗6年 (M7、M8、M10、U11+、Iphone Xs、小米9、紅米note2、紅米note4x、ZF6)</li>
       <li>生存遊戲1年 (狙擊不太會 還是電動步槍好 目前僅存瓦斯小槍)</li>
-      <li>喜歡歷史 (連金滅遼、十字軍東征、希特勒崛起、文藝復興、火藥等等等很酷)</li>
+      <li>喜歡歷史 (連金滅遼、十字軍東征、希特勒崛起、文藝復興、火藥等等)</li>
       <li>喜歡時事 (中美貿易戰、南韓薩德飛彈、南海爭議、希臘破產)</li>
       <li>喜觀喝茶/米飯/社會科學</li>
     </ul>
