--- a/kangKai/index.html
+++ b/kangKai/index.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>康闓-專案經理</title>
+    <title>康闓-專案經理 </title>
 </head>
 
 <body>
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            康闓科技
+            康闓科技 2020 / 02 / 06 15:00 - 16:00
         </a>
     </nav>
     <ul class="list-group list-group-horizontal">
@@ -23,6 +23,96 @@
         <li class="list-group-item">優勢劣勢</li>
         <li class="list-group-item">持續交付</li>
     </ul>
+    <div class="card">
+        <div class="card-header">
+            公司基本資料
+        </div>
+        <div class="card-body">
+            康闓科技於 2018 年創立，2019 年正式將總部設立於高雄。我們是一間創新且有企圖心的公司，目標是打造 Ai
+            人工智能以及新型態的電商生態，使生活更加便利，要代表國家成為世界一流的科技公司，我們堅持將團隊角色擺在最合適的位置上，達成事半功倍效果，絕不苛刻努力付出的營運團隊，這是我們的營運精神。
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            輿情分析
+        </div>
+        <div class="card-body">
+            <div>
+                (無用) 1F推cip604: 前陣子剛面過，沒開冷氣和面試官一起流汗
+            </div>
+            <div>
+                (無用-刊登的職缺就可以看得出來) 使用 React Native 或者 Flutter 去製作app
+            </div>
+            <div>
+                (稍具參考價值) 目前都是在接案居多
+            </div>
+            <div>
+                (參考價值) 面試時可能需要自己帶筆電
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            面試成本 單程445元 1小時20分 若要提前一小時到 建議搭乘0821車次 12:55 - 13:25
+        </div>
+        <ul>
+            <li> 機車 > 嘉義高鐵 10 (20分鐘)</li>
+            <li> 走路 停車場 > 高鐵 0 (5分鐘)</li>
+            <li> 嘉義高鐵 > 左營高鐵 410 (31分鐘)</li>
+            <li> 走路 高鐵 > 捷運 (3分鐘)</li>
+            <li> 捷運左營高鐵 > 捷運美麗島 25元 (13分鐘)</li>
+            <li> 走路捷運 > 公司 0 (7分鐘)</li>
+        </ul>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            職缺要求
+        </div>
+        <div>
+            <ul class="list-group">
+                <li class="list-group-item "> 1. 與 UI 設計師 、前端工程師、後端工程師配合，並能與圖隊成員進行良好及高效率的溝通</li>
+                <li class="list-group-item "> 2. 面對專案開發的困難，經常可以想到一百種辦法</li>
+                <li class="list-group-item "> 3. 可以掌握客戶需求背後的動機，洞悉客戶真正的需求，而不是一個口令一個動作</li>
+                <li class="list-group-item "> 4. 依據專案內容，規劃及撰寫需求文件</li>
+                <li class="list-group-item "> 5. 掌控專案開發進度，並能識別風險、找出解決問題的方案</li>
+                <li class="list-group-item "> 6. 擔任客戶與執行小組間的溝通橋樑</li>
+            </ul>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            專案經理審視
+        </div>
+        <ul class="list-group">
+            <li class="list-group-item">授權團隊，不進行微觀管理</li>
+            <li class="list-group-item">包容各方的團隊環境</li>
+            <li class="list-group-item">富有成效且注重結果</li>
+            <li class="list-group-item">很好的溝通者-聆聽並分享信息</li>
+            <li class="list-group-item">支持職業發展並討論績效 </li>
+            <li class="list-group-item">對團隊有清晰的願景/策略 </li>
+            <li class="list-group-item">具有相關技術 </li>
+            <li class="list-group-item">跨公司合作</li>
+        </ul>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            公司可能採取的開發方式 Scrum Agile
+        </div>
+        <ul class="list-group">
+            <img src="scrum-rules.png" class="img-fluid w-75" alt="Responsive image">
+            <li class="list-group-item">  Scrum is an iterative, incremental framework for project management</li>
+            <li class="list-group-item">Dev Team (開發團隊)</li>
+            <li class="list-group-item">Product Owner（PO，產品負責人）</li>
+            <li class="list-group-item">Scrum Master（SM，無中文名稱）</li>
+            <li class="list-group-item">Product Backlog（產品待辦清單）</li>
+            <li class="list-group-item">Daily Scrum（每日站立會議 15M） </li>
+            <li class="list-group-item">Sprint （衝刺 2~4W） </li>
+            <li class="list-group-item">Sprint Backlog（衝刺待辦清單） </li>
+            <li class="list-group-item">Sprint Planning（衝刺規劃會議 4~8H） </li>
+            <li class="list-group-item">Sprint Review（衝刺檢視會議）</li>
+            <li class="list-group-item">Sprint Retrospective / Sprint Retro（衝刺回顧會議 1.5~3H)</li>
+        </ul>
+    </div>
 </body>
 
 </html>
