--- a/kangKai/index.html
+++ b/kangKai/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            康闓科技 2020 / 02 / 06 15:00 - 16:00
+            康闓科技 2020 / 02 / 06 15:00 - 16:00 單程445元 1小時20分 若要提前一小時到 建議搭乘0821車次 12:55 - 13:25
         </a>
     </nav>
     <ul class="list-group list-group-horizontal">
@@ -53,7 +53,7 @@
     </div>
     <div class="card">
         <div class="card-header">
-            面試成本 單程445元 1小時20分 若要提前一小時到 建議搭乘0821車次 12:55 - 13:25
+            面試成本 
         </div>
         <ul>
             <li> 機車 > 嘉義高鐵 10 (20分鐘)</li>
@@ -99,7 +99,9 @@
             公司可能採取的開發方式 Scrum Agile
         </div>
         <ul class="list-group">
-            <img src="scrum-rules.png" class="img-fluid w-75" alt="Responsive image">
+             <div class="text-center">
+                 <img src="scrum-rules.png" class="img-fluid w-75 text-center" alt="Responsive image">
+             </div>
             <li class="list-group-item">  Scrum is an iterative, incremental framework for project management</li>
             <li class="list-group-item">Dev Team (開發團隊)</li>
             <li class="list-group-item">Product Owner（PO，產品負責人）</li>
@@ -111,6 +113,25 @@
             <li class="list-group-item">Sprint Planning（衝刺規劃會議 4~8H） </li>
             <li class="list-group-item">Sprint Review（衝刺檢視會議）</li>
             <li class="list-group-item">Sprint Retrospective / Sprint Retro（衝刺回顧會議 1.5~3H)</li>
+        </ul>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            如果我是面試官想對應徵者提問那些問題
+        </div>
+        <ul class="list-group">
+            <li class="list-group-item">可以請你介紹一下  你之前從事的專案經驗嗎</li>
+            <li class="list-group-item">為什麼想來高雄</li>
+            <li class="list-group-item">為什麼想來我們公司</li>
+            <li class="list-group-item">如果有2個技術員 一個設計師 一個月內要完成數據分析平台  你會怎麼規劃</li>
+            <li class="list-group-item">那如果需求大改  你要怎麼跟團隊說明  以及重新分配</li>
+            <li class="list-group-item">可以說一下你對敏捷開發了解多少嗎 </li>
+            <li class="list-group-item">如何協調各方意見與資源，達到專案目的 </li>
+            <li class="list-group-item">你過去的專案最緊急的事態 </li>
+            <li class="list-group-item">如果發生人事異動你會如何處置</li>
+            <li class="list-group-item">成員發生衝突  你會怎麼處理</li>
+            <li class="list-group-item">如何識別風險</li>
+            <li class="list-group-item">在我們公司裡  代辦清單裡  當在最後階段來不及都完成  你認為什麼是可以捨棄的</li>
         </ul>
     </div>
 </body>
