--- a/kangKai/index.html
+++ b/kangKai/index.html
@@ -101,6 +101,7 @@
         <ul class="list-group">
              <div class="text-center">
                  <img src="scrum-rules.png" class="img-fluid w-75 text-center" alt="Responsive image">
+                 <img src="Scrum-flow.png" class="img-fluid w-75 text-center" alt="Responsive image">
              </div>
             <li class="list-group-item">  Scrum is an iterative, incremental framework for project management</li>
             <li class="list-group-item">Dev Team (開發團隊)</li>
@@ -113,6 +114,21 @@
             <li class="list-group-item">Sprint Planning（衝刺規劃會議 4~8H） </li>
             <li class="list-group-item">Sprint Review（衝刺檢視會議）</li>
             <li class="list-group-item">Sprint Retrospective / Sprint Retro（衝刺回顧會議 1.5~3H)</li>
+        </ul>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            自己的專案經驗
+        </div>
+        <ul class="list-group">
+            <li class="list-group-item">啟動會議</li>
+            <li class="list-group-item">需求訪談</li>
+            <li class="list-group-item bg-primary text-white">執行</li>
+            <li class="list-group-item bg-primary text-white">臨時需求</li>
+            <li class="list-group-item bg-primary text-white">(會議))</li>
+            <li class="list-group-item">期末</li>
+            <li class="list-group-item">結案 </li>
+            <li class="list-group-item">維護 </li>
         </ul>
     </div>
     <div class="card">
@@ -130,7 +146,7 @@
             <li class="list-group-item">你過去的專案最緊急的事態 </li>
             <li class="list-group-item">如果發生人事異動你會如何處置</li>
             <li class="list-group-item">成員發生衝突  你會怎麼處理</li>
-            <li class="list-group-item">如何識別風險</li>
+            <li class="list-group-item">如何識別風險 (生產流程分析法、資產財務狀況分析法)(環境、市場、技術、生產、財務、人事)</li>
             <li class="list-group-item">在我們公司裡  代辦清單裡  當在最後階段來不及都完成  你認為什麼是可以捨棄的</li>
         </ul>
     </div>
