--- a/Resume/index.html
+++ b/Resume/index.html
@@ -60,6 +60,7 @@
     </div>
     <div class="skill">
       <div class="Card title">Other</div>
+      <div class="Card border">Slack</div>
       <div class="Card border">UI</div>
     </div>
   </div>
@@ -90,11 +91,12 @@
       <li>新港國中/嘉義高中/逢甲大學(空間資訊)/上海交換半年</li>
       <li>高中及大學遊學團小隊長</li>
       <li>樂隊經驗6年 (大鼓、手風琴、口風琴、上低音號、豎笛)</li>
-      <li>零件經驗6年 (A10-5800K、FX-8120、E3-1230、i5-6400、r5-1600)</li>
-      <li>手機經驗6年 (M7、M8、M10、U11+、Iphone Xs、小米9、紅米note2、紅米note4x、ZF6)</li>
+      <li>玩零件經驗6年 (A10-5800K、FX-8120、E3-1230、i5-6400、r5-1600)</li>
+      <li>玩手機經驗6年 (M7、M8、M10、U11+、Iphone Xs、小米9、紅米note2、紅米note4x、ZF6)</li>
       <li>喜歡歷史 (連金滅遼、十字軍東征、希特勒崛起、文藝復興、火藥等等)</li>
       <li>喜歡時事 (中美貿易戰、南韓薩德飛彈、南海爭議、希臘破產)</li>
       <li>喜觀喝茶/米飯/社會科學</li>
+      <li>學校是有教JAVA跟C++，自己有寫過React 這些較不專精沒放在技能上</li>
     </ul>
     <p></p>
   </div>
