--- a/Resume/index.html
+++ b/Resume/index.html
@@ -49,6 +49,7 @@
     </div>
     <div class="skill">
       <div class="Card title">Front-end</div>
+      <div class="Card title">Vue</div>
     </div>
     <div class="skill">
       <div class="Card title">Tool</div>
