delete little message

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -152,7 +152,7 @@
     </div>
   </div>
   <div class="portfolioCard portfolioColor">
-    <h3>感謝您閱讀至此，有任何問題歡迎直接聯繫，即使無關工作，如果想聊聊，也可以直接發個<a href="https://www.facebook.com/yunhank" class="a_Tldep">FB好友邀請</a>給我(請先告知您是誰) </h3>
+    <h3> 感謝您閱讀至此 </h3>
     <span class="introduction">當我往上一步，山頂更遠，探索永無止境</span>
     <span class="introduction">I have served. I will be of service.</span>
   </div>
